--- a/src/App.css
+++ b/src/App.css
@@ -3,23 +3,23 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 5s linear;
+  height: 20vmin;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #457be9ad;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(180, 16, 16);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #f3433d;
 }
 
 @keyframes App-logo-spin {
